Fix modal z-index issue

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -18,11 +18,12 @@
 .modal-veil {    
   background-color: $modalFogGray;
   opacity: .86;
-  height: 100%;
+  height: 100vh;
   left: 0;
   top: 0;
-  width: 100%;
+  width: 100vw;
   position: absolute;
+  z-index: 4;
 }
 
 .modal-panel-container {
@@ -50,6 +51,7 @@
   position: relative;
   transition: height 50ms ease-out;
   -webkit-transition: height 50ms ease-out;
+  z-index: 5;
 }
 
 .modal-message {
